# task-allocation-auctions

./: .gitattributes  .gitignore  ComputeCommandParamsWithVelocity.m  Copy_of_OptimalControl.m  GenerateFiguresFixedTime.m  GenerateFiguresParamsAnalysis.m  GenerateMoviesFigures.m  LICENSE  MANIFEST.in  ODE_test.m  ODE_test_loitering_1turn.m  OptimalControlSolution.m  OptimalControl_DTA.m  OptimalControl_OLTA.m  OptimalControl_lambda.m  OptimumSolution.m  PlotAlloc.m  PlotAllocTime.m  PlotAnimationAndUtility.m  PlotTaskLoitering.m  PlotUtilitySimulation.m  PlotUtilitySimulationLaTeX.m  README.md  WinnerVectorToMatrix.m  coverage.conf  optimalControlParametersAnalysis.m  plotMapAllocation.m  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
CNP_CBBA/: CBBASolution.m  CBBASolution.m~  CBBA_Bundle.m  CBBA_BundleAdd.m  CBBA_BundleAdd.m~  CBBA_BundleRemove.m  CBBA_BundleRemoveSingleAssignment.m  CBBA_Communicate.m  CBBA_Communicate_Single_Assignment.m  CBBA_ComputeBids.m  CBBA_Main.m  CalcTaskUtility.m  CalcUtility.m  agents\agent1.mat  agents\agent2.mat  agents\agent3.mat  agents\agent4.mat  readme.txt
GreedyCoalitionAuctionAlgorithm/: CalcUtility.m  GCAA_BundleAdd.m  GCAA_BundleRemoveSingleAssignment.m  GCAA_Init.m  GCAA_InsertInList.m  GCAA_RemoveFromList.m  MainTestScript.m  PlotAssignments.m  PlotAssignments2D.m  Scoring_CalcScore.m  USARSimRun.m  agents\agent5.mat
docs/: installation.md
gcaa/: README.md  __init__.py  constants.py
matlab/: ComputeCommandParamsWithVelocity.m  GenerateMoviesFigures.m  OptimalControlSolution.m  (+6 more)
(+110 files in other folders)
